# $Id$

2007-11-04	Konstantin V. Arkhipov

	* main/DAOs/StorableDAO.class.php: added merge() which updates only
	changed columns; take() now uses cache-only merge() instead of plain
	save().

	* ext/src/core/Logic/: MappableObject implemented.

	* ext/src/core/OSQL/: DBBinary, DropTableQuery, ExtractPart, FullText
	implemented.

	* ext/src/onphp.h: new macros: ONPHP_CHECK_EMPTY, ONPHP_INSTANCEOF,
	ONPHP_GET_ARGS and ONPHP_CALL_METHOD_*.

	* ext/src/core/Form/: BasePrimitive, RangedPrimitive, ComplexPrimitive
	implemented.

2007-11-03	Konstantin V. Arkhipov

	* core/Form/: alias support removed.

	* core/Form/: ability to make an unfiltered import implemented.

	* meta/, core/DB/, core/Form/: support for binary data type
	implemented.

	* core/OSQL/DataType.class.php: typeToString moved to Dialect.

2007-11-02	Vladimir A. Altuchov

	* main/Utils/IO/FileReader.class.php: new reader added.

2007-11-02	Konstantin V. Arkhipov

	* main/DAOs/GenericDAO.class.php: inject() now checks affected rows
	count for sanity.

2007-11-01	Vladimir A. Altuchov

	* main/Markup/Feed/AtomItemWorker.class.php,
	main/Markup/Feed/RssItemWorker.class.php,
	main/Markup/Feed/FeedItem.class.php: id field added.

2007-10-31	Dmitry E. Pismenny

	* core/Form/Primitives/PrimitiveDate.class.php: PrimitiveDate::checkRanges()
	fixed.

2007-10-31	Dmitry A. Lomash

	* main/Net/IpRange.class.php: added setters, dropped final declaration.

2007-10-31	Konstantin V. Arkhipov

	* main/Flow/HttpRequest.class.php: removed deprecated method
	getAttachedList().

2007-10-30	Konstantin V. Arkhipov

	* meta/classes/MetaConfiguration.class.php: class name collision
	detection added.

2007-10-30	Ivan Y. Khvostishkov

	* core/Form/Primitives/PrimitiveAnyType.class.php: anyType() -
	universal primitive ;)

2007-10-27	Ivan Y. Khvostishkov

	* core/Form/Primitives/PrimitiveHttpUrl.class.php:
	Primitive::httpUrl().

2007-10-26	Vladimir A. Altuchov

	* core/Cache/WatermarkedPeer.class.php: + setter for watermark label.
